# Vault-Merger-V2

./: .gitignore  23.txt  23b.txt  23tmp.txt  COMMANDS.md  DEDUPLICATION_ARCHITECTURE.md  Gemma 3 model card.md  PUSH_OCR_COMMIT.md  README.md  RUN-analyze.sh  RUN-dedup.sh  RUN-merge-dedup.sh  RUN-merge.sh  RUN-web.sh  TOUCHPAD_DETECTION_README.md  architecture_obsidian_vault_merger.md  collision_resolver.py  config_manager.py  count_duplicates.py  delete_deduped_from_vault.sh  detect_input_devices.sh  duplicate_remover.py  essential_touchpad_detect.sh  file_copier.py  file_scanner.py  find_duplicate_files.py  link_processor.py  main.py  prd_obsidian_vault_merger.md  pyproject.toml  report_generator.py  test_deduplication.py  test_integration.py  test_refactored_code.py  web_interface.py  workflow_obsidian_vault_merger.md
docs/: HOWTO.md
ocr_project/: INSTALL_CUDA.md  README.md  README_INSTALL.md  USAGE_JSON_TEMPLATE.md  config_loader.py  config_template.yaml  csv_tracker.py  hash_manager.py  improvements.html  json_template_handler.py  main.py  ocr_engine_transformers.py  ocr_module.py  pdf_processor.py  processing_log.py  prompt.json  prompt_compact.json  pyproject.toml  setup.py
ocr_project/OCRout/: 5a0020e34d7aec187d41b4a6c87418b0_OCR_67a34532.md  IMG_20151212_111908.279_OCR_f8630ada.md  ocr_processing_log.md  ocr_results.csv
ocr_project/config/: __init__.py
ocr_project/docs/: CONVERSION_ASSESSMENT.md  DECISIONS.md  ISSUES.md  ISSUES.md.old  JSON_TEMPLATE_EXTRACTION.md  README.md  ROADMAP.md  RULES.md  TILING_RESEARCH.md  TRANSFORMERS_ASSESSMENT.md  TRANSFORMERS_SUPPORT.md  improvements.md
ocr_project/image_processor/: __init__.py
ocr_project/ocr_engine/: __init__.py
ocr_project/result_processor/: __init__.py
old_work_from_last_night/: TESTING.md  collision_resolver.py  count_duplicates.py  deduplication_handler.py  find_duplicate_files.py  link-validator.py  link_processor.py  logger.py  obsidian_merger_config_20251028_014127.json  obsidian_merger_config_20251028_030523.json  pyproject.toml  report_generator.py  test_deduplication_links.py  (+1 more)
(+4 files in other folders)
